archive/pre_talos/kubernetes/tpi/apps/networking/phpipam/phpipam-web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: phpipam
spec:
  selector:
    app: phpipam
    component: www
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
